<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"

        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@android:color/white"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dip"
                android:gravity="left">

                <TextView
                    android:id="@+id/id_update_textView_titile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    android:text="@string/str_logo_programe_update"
                    android:textColor="#000000"
                    android:textSize="@dimen/textsize_20"></TextView>
            </RelativeLayout>

            <View
                android:id="@+id/id_white_line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="3dip" />

            <RelativeLayout
                android:id="@+id/id_update_relativeLayout01_total"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/id_white_line"
                android:layout_alignRight="@+id/id_white_line"
                android:layout_below="@+id/id_white_line"
                android:layout_marginTop="10dip"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/id_update_relativeLayout01_optional_update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:gravity="center_horizontal">

                    <!-- style="@style/bufferProgressStyle" -->

                    <TextView
                        android:id="@+id/id_load_data_textView_content"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:gravity="center"
                        android:textSize="@dimen/textsize_16"
                        android:text="@string/str_logo_optional_update_prompt"
                        android:textColor="#000000"></TextView>
                </RelativeLayout>
                <!-- android:text="@string/str_update_optional_update_prompt_" -->

                <View
                    android:id="@+id/id_white_line_"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_below="@+id/id_update_relativeLayout01_optional_update"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip" />

                <LinearLayout
                    android:id="@+id/id_update_relativeLayout02_button"
                    android:layout_width="fill_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_white_line_"
                    android:minWidth="300dp"
                    android:background="@color/colorb6b6b6"

                    android:layout_marginTop="5dip"
                    android:gravity="center">

                    <Button
                        android:id="@+id/id_update_btn_ok"
                        android:background="@drawable/blue_bg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="35dp"
                        android:text="@string/str_logo_update_now"
                        android:padding="@dimen/margin_10" />

                    <Button
                        android:id="@+id/id_update_btn_cancle"
                        android:background="@drawable/gray_bg"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="@dimen/margin_40"
                        android:minHeight="35dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_logo_deal_with_later"
                        android:padding="@dimen/margin_10" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/id_update_relativeLayout3_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/id_white_line"
                android:layout_alignRight="@+id/id_white_line"
                android:layout_below="@+id/id_update_relativeLayout01_total"
                android:layout_marginBottom="10dip"
                android:visibility="gone">

                <TextView
                    android:id="@+id/id_update_tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="left"
                    android:textColor="#000000"></TextView>

                <ProgressBar
                    android:id="@+id/id_update_progressBar_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_update_tv_progress"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"></ProgressBar>
                <!-- style="@style/bufferProgressStyle" -->

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>